[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Themes/temp_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/UI_Scenes/AnimatedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UI_Scenes/OptionsMenu.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Entry"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/PanelContainer:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Entry"
anims/Entry = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.9
margin_left = 1.0
margin_right = 1.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 26.0
margin_right = 177.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 80, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 158.0
margin_bottom = 70.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_right = 154.0
margin_bottom = 66.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 154.0
margin_bottom = 14.0
theme = ExtResource( 1 )
text = "Options"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 154.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 86.0
margin_bottom = 18.0
text = " Window Mode"

[node name="Window_Mode" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 90.0
margin_top = 0.0
margin_right = 154.0
margin_bottom = 22.0
rect_min_size = Vector2( 22, 22 )
rect_scale = Vector2( 1, 1 )
text = "Windowed"

[node name="Back" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 58.0
margin_top = 44.0
margin_right = 96.0
margin_bottom = 66.0
rect_min_size = Vector2( 22, 22 )
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Window_Mode" to="." method="_on_Window_Mode_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
